# mo413-ciencia-saude

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  DATASETS.md  README.md
aulas/: 2026-02-23 - Course Overview - Resumo.md  2026-02-25 - Models and Tables - Resumo.md  2026-03-02 - Biologia celular e molecular - Resumo.md  2026-03-04 - Genomics and transcriptomics - Resumo.md  2026-03-09 - Networks and Graphs - Resumo.md  2026-03-11 - Complex Networks - Resumo.md
aulas/2026-02-23 - Course Overview/: README.md
aulas/2026-02-25 - Models and Tables/: README.md
aulas/2026-03-02 - Biologia celular e molecular/: README.md
aulas/2026-03-04 - Genomics and transcriptomics/: README.md
aulas/2026-03-09 - Networks and Graphs/: README.md
aulas/2026-03-11 - Complex Networks/: README.md
aulas/2026-03-18 - Breast Cancer/: README.md
aulas/2026-03-30 - Redes PPI, Correlação e Workflow/: README.md
aulas/2026-04-01 - Orange e Workflow (Prática)/: README.md
projeto/: README.md
projeto/analise/: analise.html  analise.ipynb  analise.py  pyproject.toml
projeto/analise/workspace/: GSE45216_cytoscape.cys  GSE45216_geo.tsv  GSE45216_string.tsv  GSE7553_GEO.csv  GSE7553_string.tsv  OT-EFO_0000756-associated-targets-4_20_2026-v26_03.tsv  README.md  skin_cancer.ows
projeto/analise/workspace/Metastatic Melanoma/: .Melanoma.ows.swp.p  Cytoscape_edges.csv  Melanoma.ows  Nodes_cytoscape.csv  Nodes_cytoscape.csv.metadata  melanoma.cys  nodes_to_string.csv  string_interactions_short.tsv
projeto/analise/workspace/nodes/: Melanoma_in-situ.csv  Metastatic_melanoma.csv
(+62 files in other folders)
