[project]
name = "analise-cancro-pele"
version = "0.1.0"
description = "Análise de expressão gênica em redes — MO413A UNICAMP 2026"
authors = [
    {name = "Paulo Costa",email = "eu@paulo.costa.nom.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geoparse (>=2.0.4,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "marimo (>=0.21.1,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
